[package]
name = "mosquitto-jwt-auth"
version = "0.1.0"
authors = ["Christoph Walcher <christoph-wa@gmx.de>"]
edition = "2018"
[badges]
travis-ci = { repository = "wiomoc/mosquitto-jwt-auth" }
coveralls = { repository = "wiomoc/mosquitto-jwt-auth" }

[lib]
crate-type=["dylib"]


[dependencies]
jsonwebtoken = "6.0.1"
serde_derive = "1.0.97"
serde = "1.0.97"
base64 = "0.10.1"
