[package]
name = "mosquitto-jwt-auth"
description = "Plugin for Mosquitto MQTT broker, which enables authentication and authorisation via JWT over password."
version = "0.3.0"
authors = ["Christoph Walcher <christoph-wa@gmx.de>"]
edition = "2018"
readme = "Readme.md"
license-file="LICENSE"
repository = "https://github.com/wiomoc/mosquitto-jwt-auth"
keywords = ["MQTT"]
categories = ["network-programming"]

[badges]
coveralls = { repository = "wiomoc/mosquitto-jwt-auth" }

[lib]
crate-type=["dylib"]

[dependencies]
jsonwebtoken = "6.0.1"
serde_derive = "1.0.97"
serde = "1.0.97"
base64 = "0.10.1"
